# langgraph-agentic-rag

./: .gitignore  README.md  ingestion.py  main.py  pyproject.toml
.chroma/: chroma.sqlite3
graph/: construct_graph.py  consts.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/chains/tests/.chroma/: chroma.sqlite3
graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
