[project]
name = "langgraph-agentic-rag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
